--- a/第 3 章 数据链路层.md
+++ b/第 3 章 数据链路层.md
@@ -1,5 +1,41 @@
 # 第 3 章 数据链路层 #
 
+### 数据链路层的一些基本概念 ###
+
+#### 数据链路层的地位 ####
+
+下面简述两个主机通过互联网进行通信时数据链路层所处的地位
+
+图（a）表示用户主机H1通过电话线上网，中间经过三个路由器连接到远程主机H2，并且经过了多种网络（电话网、局域网...）。当主机H1向H2发送数据时，从协议的层次上看，数据的流动如图（b）。主机都有完整的协议栈，路由器只拥有下面的三层协议栈。数据进入路由器后要先从物理层上升到网络层，在转发表中找到下一跳的地址后，再下到物理层转发出去（如图（b）中的箭头所示）
+
+![p6]
+
+但当我们研究数据链路层的问题时，我们可以只关心在协议栈中水平方向的各数据链路层。因此，当主机H1向H2发送数据时，我们可以想象数据就是在数据链路层从左到右依次传送，如下图：
+
+![p7]
+
+#### 数据链路层使用的信道 ####
+
+数据链路层使用的信道主要有以下两种类型：
+
+1、点对点信道
+
+这种信道使用一对一的点对点通信方式（通信两点之间只有一条物理线路，没有其他任何结点）
+
+2、广播信道
+
+这种信道使用一对多的广播通信方式。广播信道上连接的主机很多，因此必须使用专用的共享信道协议来协调这些主机的数据发送
+
+#### 链路和数据链路 ####
+
+1、链路
+
+所谓链路就是从一个结点到相邻结点的一段物理线路，而中间没有任何其他的交换结点。在进行数据通信时，两个计算机间的通信路径往往要经过许多段这样的链路
+
+2、数据链路
+
+要想在一段链路上传送数据，那么还必须有一些必要的通信协议来控制这些数据的传输。若把实现这些协议的硬件或软件加到链路上，就构成了数据链路
+
 ### 数据链路层要解决的三个基本问题 ###
 
 数据链路层要解决的三个基本问题是：封装成帧、透明传输、差错检测。下面分别阐述。
@@ -14,7 +50,7 @@
 
 帧的首部和尾部的一个重要作用就是进行帧定界。一般以ASCLL表中的控制字符SOH与EOT作为帧的首部与尾部。控制字符SOH（Start Of Header)放在帧的最前面表示帧的首部，另一个控制字符EOT（End Of Transmission)表示帧的尾部（SOH与EOT是控制字符在ASCLL表中的名字，在实际的帧中他们分别以二进制`00000001`与`00000100`出现）。如下图所示：
 
-!p[2]
+![p2]
 
 接收端在收到帧后，只有当帧的首部SOH和尾部EOT都健在时接收端才会认为这是一个完整的帧，应当收下。如果数据在传输过程中出现了错误，接收端收到的帧中缺少SOH或EOT，那么接收端就知道这不是一个完整的帧，应该丢弃。
 
@@ -39,4 +75,6 @@ CRC的原理如下：
 ![p5]
 
 上图中，A是由收发双发协商确定的n位二进制数，B是要发送的数据。CRC要做的就是在B后面添加“n-1”个0，然后用添加了0的数据除以A，得到余数D。D就被称为冗余码或帧检验序列FCS（Frame Check Sequence），在发送数据B时，就会将该冗余码添加到B后面发送出去（即实际发送的数据是`101001001`）。接收端收到数据后，会将数据以帧为单位进行CRC检验：把收到的每一个帧都除以A，然后检查得到的余数，如果余数为0则无差错，余数不为0则表示出错，就丢弃。
+
+
 
