--- a/第 3 章 数据链路层.md
+++ b/第 3 章 数据链路层.md
@@ -76,5 +76,100 @@ CRC的原理如下：
 
 上图中，A是由收发双发协商确定的n位二进制数，B是要发送的数据。CRC要做的就是在B后面添加“n-1”个0，然后用添加了0的数据除以A，得到余数D。D就被称为冗余码或帧检验序列FCS（Frame Check Sequence），在发送数据B时，就会将该冗余码添加到B后面发送出去（即实际发送的数据是`101001001`）。接收端收到数据后，会将数据以帧为单位进行CRC检验：把收到的每一个帧都除以A，然后检查得到的余数，如果余数为0则无差错，余数不为0则表示出错，就丢弃。
 
+### 使用点对点信道的数据链路层 ###
+
+下面介绍点对点协议PPP（Point-to-Point Protocol）。PPP是点对点通信时，数据链路层所使用的协议。具体来说就是用户计算机和ISP进行通信时所使用的数据链路层协议。
+
+下面详述PPP的特点、帧格式、工作状态
+
+#### PPP的特点 ####
+
+1、PPP协议应满足的要求
+
+(1)、封装成帧
+
+PPP协议必须规定特殊的字符作为帧定界符，以便使接收端从收到的比特流中能够准确的找出帧开始和结束的位置
+
+(2)、透明性
+
+即如果数据中碰巧出现了和帧定界符一样的比特组合时，必须采取措施解决这个问题
+
+(3)、多种网络层协议
+
+PPP协议必须能够在同一条物理链路上同时支持多种网络层协议（如IP或IPX）的运行。即使用该条物理线路的两端可以使用任何网络层协议进行通信，比如一会儿使用的是IP，一会儿使用的是IPX
+
+(4)、多种类型链路
+
+即PPP能够在多种链路上运行（如光纤、双绞线等）
+
+(5)、差错检测
+
+即PPP能够对接收端收到的帧进行CRC差错检测并丢弃有差错的帧。需要注意的是，PPP只进行检错并丢弃错误包，但不进行纠错。因此PPP是不可靠传输协议
+
+(6)、检测连接状态
+
+即检测链路是否处于正常的工作状态
+
+(7)、最大传送单元
+
+即设置最大传送单元MTU的默认值
+
+(8)、网络层地址协商
+
+即能够协商通信双方网络层的地址
+
+(9)、数据压缩协商
+
+即协商使用何种数据压缩算法，以便接收方能够使用对应的方法解压
+
+2、PPP不需要的功能
+
+(1)、纠错。PPP只进行检错，纠错由TCP负责
+
+(2)、流量控制。流量控制由TCP负责
+
+3、PPP协议的组成
+
+PPP协议由如下三部分组成：
+
+(1)、高级数据链路控制协议HDLC（High-Level Data Link Control）。这是一种对来自网络层的数据进行帧封装的规范
+
+(2)、用来建立、配置和测试数据链路连接的链路控制协议LCP（Link Control Protocol）
+
+(3)、一套网络控制协议NCP（Network Control Protocol），其中的每一个协议支持不同的网络层协议，如IP、OSI的网络层。
+
+![p8]
+
+#### PPP的帧格式 ####
+
+1、字段的意义
+
+PPP的帧格式如下图所示。PPP帧的首部和尾部分别为四个字段和两个字段。
+
+首部的第一个字段和尾部的倒数第一个字段都是标志字段F（Flag），规定为0X7E（0X表示十六进制）。标志字段表示一个帧的开始和结束，因此标志字段就是PPP帧的定界符
+
+首部中的地址字段A规定为0XFF，控制字段C规定为0X0。但这两个字段在PPP帧中并没实际意义
+
+首部的第四个字段是2字节的协议字段，用以标明“信息部分”中装的是什么数据（如协议字段为0X0021时，表明信息部分中装的是IP数据报；协议字段为0XC021时，表明信息部分中装的是LCP数据）
+
+尾部中的倒数第二个字段是CRC的帧检验序列FCS
+
+2、0比特/字节填充
+
+当“信息部分”中出现和标志字段一样的比特组合时（0X7E），就必须采取一些措施使这种形式上和标志字段一样的比特组合不出现在信息部分中，方法就是字节/比特填充。这也就是前面所说的透明传输。
+
+在PPP使用异步传输（逐个字符传送）和同步传输（一连串的比特连续传送）时，分别使用的是字节填充和比特填充。具体如下：
+
+(1)、字节填充
+
+当PPP使用异步传输时，它把转义符定义为0X7D，并使用字节填充。填充方法如下：
+
+- 把信息字段中出现的每一个0X7E字节转变为2字节序列（0X7D，0X5E）
+- 把信息字段中出现一个0X7D的字节（即出现了和转义字符一样的比特组合），则把0X7D转变为2字节序列（0X7D，0X5D）
+- 若信息字段中出现ASCLL码的控制字符，则在该字符前面要加入一个0X7D字节，同时将该字符的编码加以改变
+
+(2)、0比特填充
+
+具体做法是：在发送端先扫描整个信息字段，只要发现有5个连续1，则立即填入一个0。接收端在收到一个帧时，先找到标志字段F以确定一个帧的边界，接着再用硬件对其中的比特流进行扫描，每当发现五个连续1时，就把这五个连续1后面的一个0删除，以还原为原来的数据。
 
 
