--- a/第 4 章 网络层.md
+++ b/第 4 章 网络层.md
@@ -18,3 +18,16 @@
 下图便展示了主机H1向H2通信发送的分组各自独立的选择路由，并且在传输过程中还可能丢失
 
 ![p1]
+
+### 虚拟互联网络 ###
+
+如第一章中所述——互联网就是用路由器将全球的所有网络连起来构成的一个网络。但是问题是，被连起来的各网络是异构的（如所采取的网络协议是不一致的），那么这些异构的网络是不能直接相互通信的，要想实现相互间的通信则必然十分复杂。
+
+为了解决上述问题，便引入了网际协议IP。即参加互连的网络的网络层都使用网际协议IP，如此以来便可以用网际协议IP实现异构网络间的通信了（各网络的异构性仍然存在，只是有了网际协议IP作为交流平台）
+
+由于各异构网络都使用网际协议IP，因此它们间便可以实现无障碍通信，就如同在各自所在的网络中通信一样，因此整个互联网就如同一个网络，而这个网络就是虚拟互联网络（或逻辑互连网络）
+
+如下图中的（a)表示路由器连接各异构网络而成的互联网，（b）表示虚拟互连网络
+
+![p2]
+
