--- a/第 4 章 网络层.md
+++ b/第 4 章 网络层.md
@@ -31,3 +31,59 @@
 
 ![p2]
 
+### IP地址 ###
+
+IP地址的作用对象是网络上的主机或路由器，以标识它们
+
+IP地址的编制方法有三类：
+
+- 分类的IP地址。这是最基本的编址方法
+- 子网的划分。这是对基本编址方法的改进
+- 构成超网。较新的无分类编址方法
+
+下面对各种编址方法的IP地址进行讨论
+
+#### 分类的IP地址 ####
+
+1、各类IP地址的结构
+
+该种方法将IP地址分为A、B、C、D、E五类，每类由网络号和主机号两个字段构成，网络号用于标识主机（或路由器）所连接到的网络，主机号用于标识该主机（或路由器）：
+
+![p3]
+
+一个网络号在整个因特网范围内必须是唯一的；一个主机号在网络号所指明的网络范围内必须是唯一的。我们还将网络号视为一个网段（这时IP地址意义上的网段，注意与第三章中的网段概念相区分），若几个主机的网络号一致，则意味着他们在同一个网段
+
+> 地址分配机构只负责分配网络号，剩下的主机号则由得到该网络号的单位自行分配
+
+2、各类IP地址的范围
+
+(1)、A类IP地址
+
+A类IP地址的网络字段占一个字节（第一位固定为0），故可指派的网络号个数是`2^7 - 2`。减2是因为：网络字段为全0的IP地址是一个保留地址，表示本网络；网络号为127（即01111111）作为本地软件环回测试之用（即本主机的进程之间的通信之用），若主机发送一个IP地址为环回地址的IP数据报，则本主机中的协议软件就处理数据报中的数据，而不把数据发送到任何网络（比如我们使用本地wampsever做测试时，访问地址就是127.0.0.1）。目的地址为环回地址的IP数据报永远不会出现在任何网络上，因为网络号为127的地址根本不是一个网络地址。
+
+A类IP地址的主机字段占三个字节，故A类网络中的最大主机数是`2^24 - 2`。减2是因为：全0的主机号字段表示该IP地址是本主机所连接到的网络地址（如5.0.0.0可表示5.x.x.x的网络地址）；全1的主机号字段表示该网络上的所有主机
+
+(2)、B类IP地址
+
+B类IP地址的网络字段占两个字节（前两位固定为10），且128.0.0.0不被指派，因此可指派的网络号个数是`2^14 - 1`
+
+B类IP地址的主机字段占两个字节，故B类网络中的最大主机数是`2^16 - 2`(扣除全0与全1的主机号)
+
+(3)、C类IP地址
+
+C类IP地址的网络字段占三个字节（前三位固定为110），且192.0.0.0不被指派，因此可指派的网络号个数是`2^21 - 1`
+
+C类IP地址的主机字段占一个字节，故C类网络中的最大主机数是`2^8 - 2`(扣除全0与全1的主机号)
+
+> A、B、C都要扣除全0与全1的主机号
+
+至此，“分类的IP地址”便已阐述完毕，下面通过一张图补充一些关于分类IP地址的其他知识点：
+
+![p4]
+
+上图展示的是路由器将几个局域网连接为一个互联网。我想补充的是：
+
+- 在同一个局域网上的主机或路由器的IP地址中的网络号必须是一样的
+- 一个主机或路由器可以同时具有多个IP地址。如一个主机同时连接到两个网络上时，该主机就必须同时具有两个相应的IP地址，又如上图中所示的路由器，其每个接口都有一个IP地址，且由于路由器就是用于连接不同网络的，因此其至少有两个IP地址
+- 当两个路由器直接相连时，在连线两端的接口处可以分配也可以不分配IP地址，现在一般不分配IP地址
+- 用网桥互联的网段仍然是一个局域网，只能有一个网络号
