--- a/第 5 章 运输层.md
+++ b/第 5 章 运输层.md
@@ -59,3 +59,20 @@ UDP的首部由四个字段组成，每个字段两字节。各字段如下：
 当运输层从IP层收到UDP数据报时，就根据首部中的目的端口，把UDP数据报通过相应的端口，上交最后的终点——应用进程。如果接收方UDP发现收到的报文中的目的端口号不正确（即不存在对应于该端口号的应用进程），就丢弃该报文，并由ICMP发送“端口不可达”差错报文给发送方
 
 UDP在收到网络层交上来的UDP报文后，会对报文进行差错检测，检测方法是：首先在UDP报文前加上“伪首部”（如上图），然后对加上伪首部的整个UDP报文计算校验和。可见，UDP的校验和不仅仅检验首部，还检验数据部分。而第四章中的IP数据报仅检验首部
+
+### 传输控制协议TCP ###
+
+#### TCP的特点 ####
+
+- TCP是面向连接的。即应用程序在使用TCP协议之前，必须先建立TCP连接。在传送数据完毕后，必须释放已经建立的TCP连接
+- 每一个TCP连接只有两个端点（即TCP连接是一对一的）
+- TCP提供可靠交付。即通过TCP连接传送的数据，无差错、不丢失、不重复、并且按序到达
+- TCP提供全双工通信。TCP连接的两端都设有发送缓存和接收缓存，用来临时存放通信的数据。在发送时，进程将数据传给TCP缓存后，就可以做自己的事情了，TCP自己会择机把数据发送出去。在接收时，TCP将收到的数据放入缓存，上层的进程在合适的时候读取缓存中的数据
+
+#### 套接字（socket） ####
+
+在上面的“TCP的特点”中我们已经知道——每一个TCP连接有两个端点。实际上，TCP连接的端点就叫“套接字”
+
+套接字由IP地址加端口号组成，即`套接字=IP:端口号`（如`192.3.4.5:80`就是一个套接字）
+
+每一个TCP连接唯一的被通信两端的两个端点（即两个套接字）所确定，即`TCP连接={(IP1:port1), (IP2:port2)}`(IP1/2是两个端点主机的IP地址，port1/2是两个端点主机中的端口号)
